--- a/Google Site + Notion/Resume.html
+++ b/Google Site + Notion/Resume.html
@@ -1007,6 +1007,14 @@
             </td>
             <td id="Zf``" class="" style=" vertical-align: top;"><br/>07-10/2023</td>
         </tr>
+		<tr id="fc29fdd4-8d9d-4d9b-89cd-0afcaa4212bc">
+            <td id="qszn" class="" style="width:738px">
+                <strong><span style="border-bottom:0.05em solid">Side-project</span></strong><br/>
+                Founded and operated Hominiter, a prominent online platform dedicated to science reviews, innovations, novel findings and history of bionics science.   [<a href="https://dngvmnh.github.io/Hominiter/">link</a>]<br/>
+                <em>Developed blog's website with JavaScript and produced high-quality written multimedia content.</em>
+            </td>
+            <td id="Zf``" class="" style=" vertical-align: top;"><br/>05-10/2023</td>
+        </tr>
         <tr id="46682cde-258f-44ae-9dff-444e4116a411">
             <td id="qszn" class="" style="width:738px">
                 <strong><span style="border-bottom:0.05em solid">Mini-review</span></strong><br/>
