--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
     
     <div class="about-me-container">
         <div class="about-img">
-            <img src="" alt="">
+            <img src="../images/vuminhdang.png" alt="">
         </div>
         <div class="about-info">
             <h2>ABOUT ME</h2>
