--- a/about.html
+++ b/about.html
@@ -47,14 +47,13 @@
         </nav>
     </header>
 
-    <div class="about-post-container">
+    <div class="about-post-container" id="edit">
         <br><h1>Hominiter - Initiating Profound <strong>Immersion</strong></h1><br><br>
 
 <p>Greetings! Step into my world of knowledge and curiosity where you can explore the fascinating realm of bionics science. Here, you can find posts written by me across four main themes: historical insights, notable figures, findings, and miscellaneous discoveries. May you find your "immersion" and unravel new perspectives here!
 </p><br>
 <h1>About me</h1><br><br>
-<p>Hey folks, it's Dang at the helm of this blog. My name is Vu Minh Dang. I am currently attending High School for the Gifted based in Ho Chi Minh City, Vietnam. With a keen passion for science and its history, I'm eager to share my knowledge, insights and enthusiasm through this blog as well as inspire the boffin inside you! 
-</p><br>
+<p>Hey folks, it's Dang at the helm of this blog. My name is Vu Minh Dang. I am currently attending High School for the Gifted based in Ho Chi Minh City, Vietnam. With a keen passion for science and its history, I'm eager to share my knowledge, insights and enthusiasm through this blog as well as inspire the boffin inside you!</p><br>
 <br>
 <h1>Why "Hominiter"?</h1><br><br>
 
