--- a/about.html
+++ b/about.html
@@ -59,6 +59,12 @@
 
 <p>Hominiter is the fusion between two Latin-originated words "homini" - people and "iter" meaning journey. At Hominiter, you can immerse in trands of development through different innovations, novel findings and history of science that mainly combine bionics, humanoid robots with other human-centered areas such as engineering, cryptography and computer science. We'll kick things off by exploring some interesting facts. Have fun!
 </p><br>
+<br>
+<h1>Why this weird font?</h1><br><br>
+
+<p>This is Bionic Reading. The idea is your eyes focus on the bolded part of the word and your brain completes the rest. Your brain can read faster than your eyes, so by essentially reducing the number of letters your eye needs to look at, you can read faster while still retaining the full context. Bionic Reading can help people with ADD and ADHD focus more easily on what they're reading by making the font more visually stimulating. 
+</p><br>
+
     </div>
     <div class="btn-cont">
         <a href="./posts.html" class="more-btn place-items-center">See posts</a>
