--- a/about.html
+++ b/about.html
@@ -69,7 +69,9 @@
 <h1>Why this weird font?</h1><br><br>
 
 <p>This is Bionic Reading. The idea is your eyes focus on the bolded part of the word and your brain completes the rest. Your brain can read faster than your eyes, so by essentially reducing the number of letters your eye needs to look at, you can read faster while still retaining the full context. Bionic Reading can also help people with ADD and ADHD focus more easily on what they're reading by making the font more visually stimulating. 
-</p><br>
+</p>
+<span>Not accustomed to this font? You can easily switch it off at any time using the </span><i class="ri-book-line bio-icon"></i><span> button in the navigation bar.</span>
+<br>
 
     </div>
     <div class="btn-cont">
