--- a/about.html
+++ b/about.html
@@ -10,6 +10,7 @@
     <link rel="icon" href="assets/VMD Icon.png" type="image/png">
     <link rel="icon" href="assets/VMD Icon.png" type="image/png">
     <link rel="apple-touch-icon" href="assets/VMD Icon.png">
+    <meta name="google-site-verification" content="LEG3Rx9PyPZzUVvMXUo1elkyCv_hz1olrUGshqy0T_4" />
 </head>
 <body>
     <header class="header" id="header">
